Correct spacing around card

--- a/frontend/src/pages/vitals/vitals.css
+++ b/frontend/src/pages/vitals/vitals.css
@@ -20,7 +20,7 @@ h5 {
     background: #FFFFFF;
     border-radius: 20px;
     padding: 50px;
-    box-shadow: 5px 10px 50px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 }
 
 body label, i {
@@ -52,4 +52,13 @@ select {
 button #update-info {
     margin: 80px 0px 0px 40px;
     background-color: green;
+}
+
+#update-info{
+    background-color: #111727;
+    margin: 50px 0px 30px 0px;
+}
+
+#vitals {
+    margin-bottom: 200px;
 }
